Closed Bug 335524 Opened 19 years ago Closed 19 years ago

Controls using index() in @ref does not work on form load

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

(Keywords: fixed1.8.0.5, fixed1.8.1)

Attachments

(2 files)

Attached file Testcase
Blocks: 335525
Attached patch FixSplinter Review
Problem was that we did not notify listeners when setting the initial index, so they got index = 0.
Assignee: aaronr → allan
Status: NEW → ASSIGNED
Attachment #219997 - Flags: review?(Olli.Pettay)
Attachment #219997 - Flags: review?(Olli.Pettay) → review+
Attachment #219997 - Flags: review?(doronr)
Attachment #219997 - Flags: review?(doronr) → review+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Keywords: fixed1.8.1
Keywords: fixed1.8.0.5
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: