[XForms] Controls using index() in @ref does not work on form load. Bug 335524, r=smaug+doronr